--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@emotion/cache": "^11.10.3",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
+        "@huddle01/huddle01-iframe": "^0.0.8",
         "@mui/lab": "^5.0.0-alpha.100",
         "@mui/material": "^5.10.6",
         "@mui/styles": "^5.10.6",
