--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
         "lodash": "^4.17.21",
+        "multiselect-react-dropdown": "^2.0.25",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
