--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
         "apexcharts": "^3.35.5",
+        "axios": "^1.2.0",
         "formik": "^2.2.9",
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
         "lodash": "^4.17.21",
         "multiselect-react-dropdown": "^2.0.25",
+        "nft.storage": "^7.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
