--- a/package.json
+++ b/package.json
@@ -82,15 +82,12 @@
         "@babel/eslint-parser": "^7.19.1",
         "eslint": "^8.23.1",
         "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-config-prettier": "^8.5.0",
         "eslint-config-react-app": "7.0.1",
         "eslint-import-resolver-typescript": "3.5.1",
         "eslint-plugin-flowtype": "^8.0.3",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "6.6.1",
-        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.8",
-        "eslint-plugin-react-hooks": "4.6.0",
-        "prettier": "2.7.1"
+        "eslint-plugin-react-hooks": "4.6.0"
     }
 }
