--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@testing-library/user-event": "^14.4.3",
         "apexcharts": "^3.35.5",
         "axios": "^1.2.0",
+        "ethers": "^5.7.2",
         "formik": "^2.2.9",
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
