--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mui/lab": "^5.0.0-alpha.100",
         "@mui/material": "^5.10.6",
         "@mui/styles": "^5.10.6",
+        "@pushprotocol/restapi": "^0.2.1",
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -45,6 +46,7 @@
         "redux": "^4.2.0",
         "simplebar": "^5.3.8",
         "simplebar-react": "^2.4.1",
+        "styled-components": "^5.3.6",
         "typescript": "4.8.3",
         "web-vitals": "^3.0.2",
         "yup": "^0.32.11"
