Added contract calls

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "mantis-free-react-admin-template",
     "version": "1.1.0",
     "private": true,
-    "homepage": "https://mantisdashboard.io/free",
+    "homepage": "https://mantisdashboard.io/",
     "dependencies": {
         "@ant-design/colors": "^6.0.0",
         "@ant-design/icons": "^4.7.0",
