--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "react-apexcharts": "^1.4.0",
         "react-copy-to-clipboard": "^5.1.0",
         "react-device-detect": "^2.2.2",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-draggable": "^4.4.5",
         "react-element-to-jsx-string": "^15.0.0",
@@ -44,6 +46,7 @@
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
         "react-syntax-highlighter": "^15.5.0",
+        "react-tag-input": "^6.8.1",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
         "simplebar": "^5.3.8",
